--- a/index.html
+++ b/index.html
@@ -59,30 +59,52 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="./images/about_img_1.jpg" alt="Компютери" /></li>
-          <li><img src="./images/about_img_2.jpg" alt="Алгоритми" /></li>
-          <li><img src="./images/about_img_3.jpg" alt="Графіка" /></li>
+          <li>
+            <img src="./images/about_img_1.jpg" width="370" alt="Компютери" />
+          </li>
+          <li>
+            <img src="./images/about_img_2.jpg" width="370" alt="Алгоритми" />
+          </li>
+          <li>
+            <img src="./images/about_img_3.jpg" width="370" alt="Графіка" />
+          </li>
         </ul>
       </section>
       <section>
         <ul>
           <li>
-            <img src="./images/card_photo_1.jpg" alt="Фото працівника" />
+            <img
+              src="./images/card_photo_1.jpg"
+              width="270"
+              alt="Фото працівника"
+            />
             <h2>Ігор Дем'яненко</h2>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/card_photo_2.jpg" alt="Фото працівника" />
+            <img
+              src="./images/card_photo_2.jpg"
+              width="270"
+              alt="Фото працівника"
+            />
             <h2>Ольга Рєпіна</h2>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/card_photo_3.jpg" alt="Фото працівника" />
+            <img
+              src="./images/card_photo_3.jpg"
+              width="270"
+              alt="Фото працівника"
+            />
             <h2>Микола Тарасов</h2>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/card_photo_4.jpg" alt="Фото працівника" />
+            <img
+              src="./images/card_photo_4.jpg"
+              width="270"
+              alt="Фото працівника"
+            />
             <h2>Михайло Єрмаков</h2>
             <p>UI Designer</p>
           </li>
