Зміна посилання логотипу

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="http://">WebStudio</a>
+        <a href="/index.html">WebStudio</a>
         <ul>
           <li><a href="./index.html">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
@@ -112,7 +112,7 @@
       </section>
     </main>
     <footer>
-      <a href="http://">WebStudio</a>
+      <a href="/index.html">WebStudio</a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <p>info@devstudio.com</p>
