--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WebStudio</title>
   </head>
   <body>
+    <!-- ------------Шапка-------- -->
     <header>
       <nav>
         <a href="/index.html">WebStudio</a>
@@ -19,11 +20,15 @@
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
+     <!-- ------------Шапка-------- -->
     <main>
+      <!-- Секція герой------------ -->
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
+      <!-- Секція герой------------ -->
+      <!-- Секція особливості----- -->
       <section>
         <h2>Особливості</h2>
         <ul>
@@ -56,6 +61,8 @@
           </li>
         </ul>
       </section>
+      <!-- Секція особливості----- -->
+      <!-- Секція чим займаємось----- -->
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
@@ -70,6 +77,8 @@
           </li>
         </ul>
       </section>
+      <!-- Секція чим займаємось----- -->
+      <!-- Секція команда----- -->
       <section>
         <ul>
           <li>
@@ -110,7 +119,9 @@
           </li>
         </ul>
       </section>
+      <!-- Секція команда----- -->
     </main>
+    <!-- Підвал----------- -->
     <footer>
       <a href="/index.html">WebStudio</a>
       <address>
