--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
-     <!-- ------------Шапка-------- -->
+    <!-- ------------Шапка-------- -->
     <main>
       <!-- Секція герой------------ -->
       <section>
@@ -125,9 +125,9 @@
     <footer>
       <a href="/index.html">WebStudio</a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <p>info@devstudio.com</p>
-        <p>+38 096 111 11 11</p>
+        м. Київ, пр-т Лесі Українки, 26<br />
+        info@devstudio.com<br />
+        +38 096 111 11 11<br />
       </address>
     </footer>
   </body>
