--- a/index.html
+++ b/index.html
@@ -5,56 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <!-- ------------Шапка-------- -->
     <header>
       <nav>
-        <a href="/index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <a class="logo link" href="/index.html"
+          ><span class="logo_color">Web</span>Studio</a
+        >
+        <ul class="list">
+          <li>
+            <a class="nav-link link current" href="./index.html">Студія</a>
+          </li>
+          <li><a class="nav-link link" href="">Портфоліо</a></li>
+          <li><a class="nav-link link" href="">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a class="nav-contacts link" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="nav-contacts link" href="tel:+380961111111"
+        >+38 096 111 11 11</a
+      >
     </header>
     <!-- ------------Шапка-------- -->
     <main>
       <!-- Секція герой------------ -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero_title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-btn" type="button">Замовити послугу</button>
       </section>
       <!-- Секція герой------------ -->
       <!-- Секція особливості----- -->
       <section>
-        <h2>Особливості</h2>
-        <ul>
+        <h2 class="visually-hidden">Особливості</h2>
+        <ul class="list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="features-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="features-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="features-title">ПЛАНУВАННЯ</h3>
+            <p class="features-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="features-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -64,8 +79,8 @@
       <!-- Секція особливості----- -->
       <!-- Секція чим займаємось----- -->
       <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+        <h2 class="about-title">Чим ми займаємося</h2>
+        <ul class="list">
           <li>
             <img src="./images/about_img_1.jpg" width="370" alt="Компютери" />
           </li>
@@ -80,15 +95,16 @@
       <!-- Секція чим займаємось----- -->
       <!-- Секція команда----- -->
       <section>
-        <ul>
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/card_photo_1.jpg"
               width="270"
               alt="Фото працівника"
             />
-            <h2>Ігор Дем'яненко</h2>
-            <p>Product Designer</p>
+            <h3 class="card-title">Ігор Дем'яненко</h3>
+            <p class="card-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -96,8 +112,8 @@
               width="270"
               alt="Фото працівника"
             />
-            <h2>Ольга Рєпіна</h2>
-            <p>Frontend Developer</p>
+            <h3 class="card-title">Ольга Рєпіна</h3>
+            <p class="card-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -105,8 +121,8 @@
               width="270"
               alt="Фото працівника"
             />
-            <h2>Микола Тарасов</h2>
-            <p>Marketing</p>
+            <h3 class="card-title">Микола Тарасов</h3>
+            <p class="card-text">Marketing</p>
           </li>
           <li>
             <img
@@ -114,20 +130,29 @@
               width="270"
               alt="Фото працівника"
             />
-            <h2>Михайло Єрмаков</h2>
-            <p>UI Designer</p>
+            <h3 class="card-title">Михайло Єрмаков</h3>
+            <p class="card-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- Секція команда----- -->
     </main>
     <!-- Підвал----------- -->
-    <footer>
-      <a href="/index.html">WebStudio</a>
-      <address>
-        м. Київ, пр-т Лесі Українки, 26<br />
-        info@devstudio.com<br />
-        +38 096 111 11 11<br />
+    <footer class="footer">
+      <a class="logo link logo_footer" href="/index.html"
+        ><span class="logo_color">Web</span>Studio</a
+      >
+      <address class="footer-address">
+        <a
+          class="footer-link link"
+          href="https://goo.gl/maps/j4G2z85VACKS4YgW9"
+          target="_blank"
+          rel="nofollow
+          norefferer noopener"
+          >м. Київ, пр-т Лесі Українки, 26</a
+        ><br />
+        <span class="footer-contacts">info@devstudio.com</span>><br />
+        <span class="footer-contacts">+38 096 111 11 11</span>><br />
       </address>
     </footer>
   </body>
