додав сторінку портфоліо та стилі до неї

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           <li>
             <a class="nav-link link current" href="./index.html">Студія</a>
           </li>
-          <li><a class="nav-link link" href="">Портфоліо</a></li>
+          <li>
+            <a class="nav-link link" href="./portfolio.html">Портфоліо</a>
+          </li>
           <li><a class="nav-link link" href="">Контакти</a></li>
         </ul>
       </nav>
