додав посилання у футері

--- a/portfolio.html
+++ b/portfolio.html
@@ -209,8 +209,14 @@
           norefferer noopener"
           >м. Київ, пр-т Лесі Українки, 26</a
         ><br />
-        <span class="footer-contacts">info@devstudio.com</span>><br />
-        <span class="footer-contacts">+38 096 111 11 11</span>><br />
+        <a
+          class="nav-contacts link footer-contacts"
+          href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        ><br />
+        <a class="nav-contacts link footer-contacts" href="tel:+380961111111"
+          >+38 096 111 11 11</a
+        >
       </address>
     </footer>
   </body>
